[gd_scene load_steps=35 format=3 uid="uid://3jvcrr1vfweh"]

[ext_resource type="Script" path="res://baddies/enemies/I/dasher/dasher.gd" id="1_kpe0a"]
[ext_resource type="Script" path="res://components/health/health.gd" id="1_skbmj"]
[ext_resource type="Script" path="res://components/states/state_machine.gd" id="3_whg0r"]
[ext_resource type="Script" path="res://baddies/enemies/I/dasher/states/dash.gd" id="4_x3y7c"]
[ext_resource type="Script" path="res://baddies/enemies/I/dasher/states/die.gd" id="5_x1hi3"]
[ext_resource type="PackedScene" uid="uid://dihwftj02yegc" path="res://components/health_indicator/health_indicator.tscn" id="6_ln5dx"]
[ext_resource type="PackedScene" uid="uid://bitvuxp6davs1" path="res://components/player_tracker/player_tracker.tscn" id="7_rx464"]
[ext_resource type="PackedScene" uid="uid://r22a0mmuikgy" path="res://components/blood_splatter/bleeder.tscn" id="8_fo8ow"]
[ext_resource type="PackedScene" uid="uid://d10bs0byoutqy" path="res://components/blood_splatter/blood_point/blood_pointer.tscn" id="9_7mg7m"]
[ext_resource type="PackedScene" uid="uid://b0h3spmyp72xm" path="res://components/shadow/shadow.tscn" id="9_7sqt5"]
[ext_resource type="Shader" path="res://components/shadow/shadow.gdshader" id="10_hj880"]
[ext_resource type="Texture2D" uid="uid://ic7qq70ui46u" path="res://assets/textures/enemies/dasher.png" id="11_dkm4l"]
[ext_resource type="PackedScene" uid="uid://ck7giesvc1amw" path="res://components/height_sprite/height_sprite.tscn" id="11_drnio"]
[ext_resource type="Shader" path="res://components/flash.gdshader" id="12_8fhh0"]
[ext_resource type="PackedScene" uid="uid://dvvktbgt1ayca" path="res://components/hurtbox/hurtbox.tscn" id="14_2ro2n"]
[ext_resource type="Texture2D" uid="uid://8jc7c47l6pc7" path="res://assets/textures/small-circle.png" id="14_f30kf"]
[ext_resource type="PackedScene" uid="uid://bd83v7x2q3o7f" path="res://components/hitbox/hitbox.tscn" id="15_qifm4"]
[ext_resource type="AudioStream" uid="uid://cwy0cay5n5w2e" path="res://assets/sounds/hurt6.wav" id="16_s7b0j"]
[ext_resource type="AudioStream" uid="uid://cf3poo1xtvn3p" path="res://assets/sounds/boom8.wav" id="17_8qfu3"]
[ext_resource type="Texture2D" uid="uid://cskb633sejnhj" path="res://assets/textures/light_bullet_turned.png" id="19_1i43l"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_l8ooj"]
bounce = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ggjf8"]
resource_local_to_scene = true
shader = ExtResource("10_hj880")
shader_parameter/color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t3qxr"]
resource_local_to_scene = true
shader = ExtResource("12_8fhh0")
shader_parameter/active = false
shader_parameter/tint = Color(1, 0, 0, 1)

[sub_resource type="Curve" id="Curve_um7fx"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_f4fjb"]
curve = SubResource("Curve_um7fx")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_welbs"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(-10, 0, 0)
gravity = Vector3(0, 0, 0)
tangential_accel_min = -10.0
tangential_accel_max = 10.0
scale_min = 0.5
scale_max = 0.75
scale_curve = SubResource("CurveTexture_f4fjb")

[sub_resource type="CircleShape2D" id="CircleShape2D_q4wrm"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_q56h2"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7csna"]
size = Vector2(12, 8)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_nc0r7"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("16_s7b0j")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3uuoo"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("17_8qfu3")

[sub_resource type="Curve" id="Curve_8elq0"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_dvt62"]
curve = SubResource("Curve_8elq0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dogjb"]
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape_offset = Vector3(-6, 0, 0)
direction = Vector3(-1, 0, 0)
spread = 15.0
initial_velocity_min = 250.0
initial_velocity_max = 350.0
gravity = Vector3(0, 0, 0)
damping_min = 250.0
damping_max = 750.0
scale_curve = SubResource("CurveTexture_dvt62")

[node name="Dasher" type="RigidBody2D" node_paths=PackedStringArray("coll_shape", "hurt_coll_shape", "hit_coll_shape", "hurtbox", "hitbox", "health", "health_indicator", "player_tracker", "sprite", "shadow", "trail", "bleeder", "pointer", "hurt_sfx")]
collision_layer = 10
physics_material_override = SubResource("PhysicsMaterial_l8ooj")
gravity_scale = 0.0
linear_damp = 2.5
angular_damp = 2.5
script = ExtResource("1_kpe0a")
coll_shape = NodePath("CollisionShape2D")
hurt_coll_shape = NodePath("Hurtbox/CollisionShape2D")
hit_coll_shape = NodePath("Hitbox/CollisionShape2D")
hurtbox = NodePath("Hurtbox")
hitbox = NodePath("Hitbox")
health = NodePath("Health")
health_indicator = NodePath("HealthIndicator")
player_tracker = NodePath("PlayerTracker")
sprite = NodePath("HeightSprite")
shadow = NodePath("Shadow")
trail = NodePath("Trail")
bleeder = NodePath("Bleeder")
pointer = NodePath("BloodPointer")
hurt_sfx = NodePath("HurtSFX")

[node name="Health" type="Node" parent="."]
script = ExtResource("1_skbmj")
max_health = 10

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_whg0r")
initial_state = NodePath("Dash")

[node name="Dash" type="Node" parent="StateMachine" node_paths=PackedStringArray("dash_timer", "dash_particles")]
script = ExtResource("4_x3y7c")
dash_timer = NodePath("DashTimer")
dash_particles = NodePath("../../Dash")

[node name="DashTimer" type="Timer" parent="StateMachine/Dash"]

[node name="Die" type="Node" parent="StateMachine" node_paths=PackedStringArray("die_sfx")]
script = ExtResource("5_x1hi3")
die_sfx = NodePath("../../DieSFX")

[node name="HealthIndicator" parent="." instance=ExtResource("6_ln5dx")]
entity_name = "MELEE I"
radius = 16.0
name_radius = 8.0
hurt_color = Color(1, 1, 0, 0.2)
outline_color = Color(1, 1, 0, 0.2)

[node name="PlayerTracker" parent="." instance=ExtResource("7_rx464")]
color = Color(1, 1, 0, 0.501961)

[node name="Bleeder" parent="." instance=ExtResource("8_fo8ow")]
blood_color = Color(1, 1, 0, 1)

[node name="BloodPointer" parent="." instance=ExtResource("9_7mg7m")]
blood_color = Color(1, 1, 0, 1)

[node name="Shadow" parent="." node_paths=PackedStringArray("caster") instance=ExtResource("9_7sqt5")]
material = SubResource("ShaderMaterial_ggjf8")
texture = ExtResource("11_dkm4l")
caster = NodePath("../HeightSprite")

[node name="HeightSprite" parent="." instance=ExtResource("11_drnio")]
material = SubResource("ShaderMaterial_t3qxr")
texture = ExtResource("11_dkm4l")

[node name="Trail" type="GPUParticles2D" parent="."]
z_index = -1
amount = 30
process_material = SubResource("ParticleProcessMaterial_welbs")
texture = ExtResource("14_f30kf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_q4wrm")

[node name="Hurtbox" parent="." instance=ExtResource("14_2ro2n")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_q56h2")

[node name="Hitbox" parent="." instance=ExtResource("15_qifm4")]
damage_cooldown = 0.25
knockback_strength = 256.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_7csna")
disabled = true

[node name="HurtSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_nc0r7")
volume_db = -10.0
max_distance = 512.0
bus = &"sfx"

[node name="DieSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_3uuoo")
max_distance = 512.0
bus = &"sfx"

[node name="Dash" type="GPUParticles2D" parent="."]
modulate = Color(1, 1, 0, 1)
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_dogjb")
texture = ExtResource("19_1i43l")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[connection signal="has_died" from="Health" to="StateMachine/Die" method="_on_health_has_died"]
[connection signal="timeout" from="StateMachine/Dash/DashTimer" to="StateMachine/Dash" method="_on_dash_timer_timeout"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="knocked_back" from="Hurtbox" to="." method="_on_hurtbox_knocked_back"]
